# prompt-flow-poc

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.copilot/: RULES.md
data/: .gitkeep
src/azure/: README.md
src/azure/ai-foundry/: README.md  flow.dag.yaml  foundry_inference.py  requirements.txt
src/azure/openai/: README.md  chat_completion.jinja2  flow.dag.yaml  requirements.txt
src/azure/shared/: README.md  azure_ml_connection.yaml  azure_openai_connection.yaml  connections.md
src/local/: README.md  basic_flow.py  test_local_foundry.py
src/local/demo-chat-flow/: foundry_chat.py
src/local/demo-chat-flow/.promptflow/: flow.tools.json
src/new-chat-flow/: flow.dag.yaml  foundry_chat.py  foundry_local.yaml
src/new-chat-flow/.promptflow/: flow.tools.json
