[project]
name = "prompt-flow-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "foundry-local-sdk>=0.3.1",
    "openai>=1.102.0",
    "promptflow>=1.18.1",
    "promptflow-azure>=1.18.1",
    "promptflow-devkit>=1.18.1",
    "promptflow-tools>=1.6.1",
    "promptflow-tracing>=1.18.1",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
]
